<resources>
    <string name="app_name">BaKKe</string>
    <string name="finalizarPed">Finalizar pedido</string>
    <string name="fabEnCurso">Pedidos en curso</string>
    <string name="fabFinalizados">Pedidos finalizados</string>
    <string name="listaOrdenes">Lista de pedidos</string>
    <string name="exit">¿Seguro que quiéres salir de BaKKe?</string>
    <string name="confirmacion">Sí</string>
    <string name="cancelar">Cancelar</string>
    <string name="title_activity_map">Ruta del Pedido</string>
    <string name="permisosYES">Permisos de ubicación aceptados.</string>
    <string name="permisosNO">Permisos de ubicación denegados. Debes aceptarlos para usar la aplicación.</string>
    <string name="rechazarPedido">¿Seguro que quiéres eliminar este pedido?</string>
    <string name="pedidoAceptado">Has aceptado el pedido. Puedes volver a consultarlo en \"Pedidos en curso\".</string>
    <string name="pedidoFinalizado">Has finalizado el pedido. Puedes volver a consultarlo en \"Pedidos finalizados\".</string>
    <string name="pedFinalizado">Pedido finalizado</string>
    <string name="pedEnCurso">Pedido en curso...</string>
    <string name="pedEnEspera">¡Pedido en espera!</string>
    <string name="fecha">Fecha:\u0020</string>
    <string name="cliente">Cliente:\u0020</string>
    <string name="direccion">Dirección:\u0020</string>
    <string name="fechaDetalles">Fecha del pedido:</string>
    <string name="clienteDetalles">Nombre del cliente:</string>
    <string name="orden">Orden:</string>
    <string name="ubicacionCliente">Ubicación del cliente</string>
    <string name="detallesPedido">Detalles del pedido</string>
    <string name="aceptarPed">Aceptar pedido</string>
    <string name="aceptarFinPed">¿Seguro que quiéres finalizar este pedido?</string>
    <string name="actualizarPedidos">Actualizando pedidos</string>
    <string name="cargando">Cargando...</string>
    <string name="errorJSON">Imposible cargar los datos del pedido. Intentelo más tarde.</string>
    <string name="errorRequest">Imposible conectar con el servidor. Intentelo más tarde.</string>
    <string name="rechazarPedLoad">Rechazando pedido</string>
    <string name="rechazarPed">Has rechazado el pedido.</string>
    <string name="pedidoEliminado">Has eliminado el pedido.</string>
</resources>
