<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screenmain"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/imageButton_exit"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logout" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView_ordenes"
            android:layout_width="204dp"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"

            android:layout_marginEnd="8dp"
            android:layout_marginBottom="608dp"
            android:drawableStart="@drawable/orden"
            android:gravity="center"
            android:text="@string/listaOrdenes"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="329dp"
            android:layout_height="547dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/fabmenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:menu_colorNormal="@color/colorSecond"
            app:menu_colorPressed="@color/colorSecondPressed"
            app:menu_fab_size="normal"
            app:menu_icon="@drawable/fab_add">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_finalizado"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="openFinalizados"
                android:src="@drawable/finish"
                app:fab_colorNormal="@color/colorPrimary"
                app:fab_colorPressed="@color/colorPrimaryPressed"
                app:fab_label="@string/fabFinalizados"
                app:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab_encurso"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="openEnCurso"
                android:src="@drawable/camion"
                app:fab_colorNormal="@color/colorPrimary"
                app:fab_colorPressed="@color/colorPrimaryPressed"
                app:fab_label="@string/fabEnCurso"
                app:fab_size="mini" />
        </com.github.clans.fab.FloatingActionMenu>

    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>